[package]
name = "poem_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.3"
poem-openapi = { version = "1.3", features = ["swagger-ui", "email"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "time",
    "env-filter",
    "registry",
    "std",
] }
tracing-appender = "0.2.0"
time = { version = "0.3.5", features = [
    "local-offset",
    "std",
    "formatting",
    "macros",
] }
slab = "0.4.4"

lazy_static = "1.4.0"
